--- a/free-resource-page.html
+++ b/free-resource-page.html
@@ -124,7 +124,7 @@
                                     <li>games</li>
                                     <li>fluency</li>
                                     <li>pragmatics</li>
-                                    <li>reading</li>
+                                    <li>reading stuff</li>
                                 </ul>
                             </div>
     
