--- a/free-resource-page.html
+++ b/free-resource-page.html
@@ -70,7 +70,7 @@
                         </template>
 
 
-                    <!---<article class="repo card-1">
+                    <!--<article class="repo card-1">
                             <h3>This is a card</h3>
                             <p>This the description of this site, <br>
                             which is probably going to be a lot longer
